@@ -8,6 +8,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class WebCorsConfig implements WebMvcConfigurer {
@@ -19,7 +20,7 @@ public class WebCorsConfig implements WebMvcConfigurer {
         CorsConfiguration config = new CorsConfiguration();
 
         config.setAllowCredentials(true); // 서로 다른 도메인 간 쿠키 전달 허용
-        config.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:8080", "http://127.0.0.1:3000", "http://127.0.0.1:8080")); // 로컬호스트 허용
+        config.setAllowedOrigins(List.of("http://localhost:3000")); // 로컬호스트 허용
         config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // 허용할 헤더
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // 허용할 메서드, OPTIONS는 pre-flight 요청을 위해 허용해야 함.
         config.setMaxAge(3600L); // 최대 캐시 시간
